# RideNow

./: .gitignore  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4215097af9c7_create_users.py  c15b37fcdce8_initial.py
backend/app/: main.py
backend/app/core/: database.py  settings.py
backend/app/models/: __init__.py  ride.py  user.py
backend/app/routers/: rides.py
backend/app/schemas/: ride.py
